<resources>
    <string name="app_name">看見筆記</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_something">寫點什麼</string>
    <string name="title">標題</string>
    <string name="content">內容</string>
    <string name="date">日期</string>
    <string name="edit_date">%1$s 是最後編輯時間</string>
    <string name="title_demo">標題預覽</string>
    <string name="content_demo">內容預覽</string>
    <string name="tag_demo">標籤預覽</string>
    <string name="edit_date_demo">2022/2/1 12:34 是最後編輯時間</string>
    <string name="no_title">無標題</string>
    <string name="no_content">無內容</string>
    <string name="delete">刪除</string>
    <string name="move_top">移到第一行</string>
    <string name="move_bottom">移到最後一行</string>
    <string name="upload">上傳</string>
    <string name="setting">設定</string>
    <string name="setting_note_page">設定清單頁面</string>
    <string name="setting_write_note">設定編輯頁面</string>
    <string name="preview_title">預覽標題</string>
    <string name="preview_content">預覽內容</string>
    <string name="preview_time">2022/5/29 12:34</string>
    <string name="sponsor_see_note">贊助看見筆記</string>
    <string name="setting_note_text_size">設定按鈕大小：%1$s</string>
    <string name="setting_text_color">文字顏色設定</string>
    <string name="setting_background_color">背景顏色設定</string>
    <string name="setting_title_color">標題顏色設定</string>
    <string name="setting_title_text_color">標題文字顏色設定</string>
    <string name="setting_title_text_background_color">標題背景顏色設定</string>
    <string name="setting_content_color">內容顏色設定</string>
    <string name="setting_content_text_color">內容文字顏色設定</string>
    <string name="setting_content_text_background_color">內容背景顏色設定</string>
    <string name="setting_create_date_text_color">設定建立日期文字顏色</string>
    <string name="setting_create_date_background_color">設定建立日期背景顏色</string>
    <string name="setting_edit_date_color">編輯日期顏色設定</string>
    <string name="setting_edit_date_text_color">編輯日期文字顏色設定</string>
    <string name="setting_edit_date_background_color">編輯日期背景顏色設定</string>
    <string name="setting_horizontal_color">水平線顏色設定</string>
    <string name="setting_upload">上傳設定</string>
    <string name="setting_date_color">日期顏色設定</string>
    <string name="setting_date_text_color">日期文字顏色設定</string>
    <string name="setting_date_background_color">日期背景顏色設定</string>
    <string name="search_title_content">搜尋標題和內容</string>
    <string name="search_tag">搜尋標籤</string>
    <string name="system_primary">系統預設</string>
    <string name="invert_color">顏色反轉</string>
    <string name="voice_title">朗讀標題</string>
    <string name="voice_content">朗讀內容</string>
    <string name="edit_color">修改顏色</string>
    <string name="title_empty">標題沒有輸入</string>
    <string name="content_empty">內容沒有輸入</string>
    <string name="hackmd_token_empty">HackMD 金鑰沒有輸入</string>
    <string name="hackmd_token_file">HackMD 金鑰錯誤</string>
    <string name="token_save">儲存金鑰</string>
    <string name="token_remove">移除金鑰</string>
    <string name="note_list_download">下載雲端筆記</string>
    <string name="note_list_downloading">雲端筆記下載中&#8230;</string>
    <string name="note_list_download_done">雲端筆記下載完成</string>
    <string name="http_4xx_file">下載失敗，無法連線</string>
    <string name="http_5xx_file">下載失敗，伺服器故障，請稍後再試</string>
    <string name="note_list_download_fail">下載失敗，未知的錯誤，請稍後再試</string>
    <string name="hackmd_website">HackMD 官方網站</string>
    <string name="how_to_get_hackmd_token">如何取得 HackMD 金鑰？</string>
    <string name="network_fail">下載失敗，沒有開啟網路</string>
    <string name="tag_color">標籤顏色</string>
    <string name="title_color">標題顏色</string>
    <string name="content_color">內容顏色</string>
    <string name="date_color">日期顏色</string>
    <string name="setting_text">文字設定</string>
    <string name="setting_background">背景設定</string>
    <string name="input_tag">輸入標籤</string>
    <string name="new_tag">新增標籤：%1$s </string>
    <string name="confirm">確定</string>
    <string name="all_note">全部筆記</string>
</resources>