<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tmIUpload"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tmITop"
        android:icon="@drawable/ic_baseline_vertical_align_top_24"
        android:title="@string/move_top"
        app:showAsAction="always" />

    <item
        android:id="@+id/tmIBottom"
        android:icon="@drawable/ic_baseline_vertical_align_bottom_24"
        android:title="@string/move_bottom"
        app:showAsAction="always" />

    <item
        android:id="@+id/tmIDelete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>