<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="setting"
            type="tw.com.andyawd.seenote.database.Setting" />

        <variable
            name="viewModel"
            type="tw.com.andyawd.seenote.settingpage.SettingPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fspMtToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fspMtvTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/setting_note_text_size(viewModel.size)}"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fspMtToolBar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/setting_note_text_size" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/fspAcsbTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/magic_8dp"
            android:layout_marginEnd="16dp"
            android:max="800"
            android:padding="@dimen/magic_8dp"
            android:thumb="@drawable/square_primary_secondary_size40_rounded8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fspMtvTextSize"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fspAcsbTextSize">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fspMtvHorizontalLineTop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/magic_1dp"
                        android:background="?attr/colorPrimaryVariant"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fspMtvTitle"
                        style="@style/setting_demo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/title_demo"
                        android:textSize="@{viewModel.size}"
                        app:changeTitleBackgroundColor="@{setting}"
                        app:changeTitleTextColor="@{setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fspMtvContent"
                        style="@style/setting_demo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="1"
                        android:text="@string/content_demo"
                        android:textSize="@{viewModel.size}"
                        app:changeContentBackgroundColor="@{setting}"
                        app:changeContentTextColor="@{setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fspMtvDate"
                        style="@style/setting_demo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="1"
                        android:text="@string/edit_date_demo"
                        android:textSize="@{viewModel.size}"
                        app:changeDateBackgroundColor="@{setting}"
                        app:changeDateTextColor="@{setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fspMtvHorizontalLineBottom"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/magic_1dp"
                        android:background="?attr/colorPrimaryVariant" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fspMbTitleColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/magic_8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/magic_8dp"
                        android:layout_marginBottom="@dimen/magic_8dp"
                        android:gravity="center_vertical|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:lines="1"
                        android:text="@string/setting_title_color"
                        android:textSize="@{viewModel.size}"
                        app:icon="@drawable/ic_baseline_title_24"
                        app:iconGravity="start"
                        app:iconPadding="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fspMbContentColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magic_8dp"
                        android:gravity="center_vertical|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:lines="1"
                        android:text="@string/setting_content_color"
                        android:textSize="@{viewModel.size}"
                        app:icon="@drawable/ic_baseline_short_text_24"
                        app:iconGravity="start"
                        app:iconPadding="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fspMbDateColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magic_8dp"
                        android:gravity="center_vertical|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:lines="1"
                        android:text="@string/setting_date_color"
                        android:textSize="@{viewModel.size}"
                        app:icon="@drawable/ic_baseline_date_range_24"
                        app:iconGravity="start"
                        app:iconPadding="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fspMbHorizontalLineColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magic_8dp"
                        android:gravity="center_vertical|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:lines="1"
                        android:text="@string/setting_horizontal_color"
                        android:textSize="@{viewModel.size}"
                        android:visibility="invisible"
                        app:icon="@drawable/ic_baseline_horizontal_rule_24"
                        app:iconGravity="start"
                        app:iconPadding="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fspMbSponsorSeeNote"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magic_8dp"
                        android:gravity="center_vertical|start"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:lines="1"
                        android:text="@string/sponsor_see_note"
                        android:textSize="@{viewModel.size}"
                        app:icon="@drawable/ic_baseline_attach_money_24"
                        app:iconGravity="start"
                        app:iconPadding="16dp" />
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>