<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="tw.com.andyawd.seenote.settingdate.SettingDateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fsdMtToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/fsdAcsbTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/magic_8dp"
            android:layout_marginEnd="16dp"
            android:max="800"
            android:padding="@dimen/magic_8dp"
            android:thumb="@drawable/square_primary_secondary_size40_rounded8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fsdMtToolBar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fsdAcsbTextSize">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fsdMtvHorizontalLineTop"
                        style="@style/setting_horizontal_line"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fsdMtvTitle"
                        style="@style/setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_demo"
                        android:textSize="@{viewModel.setting.textSize.settingPageToFloat}"
                        app:settingTitleBackgroundColor="@{viewModel.setting}"
                        app:settingTitleTextColor="@{viewModel.setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fsdMtvContent"
                        style="@style/setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_demo"
                        android:textSize="@{viewModel.setting.textSize.settingPageToFloat}"
                        app:settingContentBackgroundColor="@{viewModel.setting}"
                        app:settingContentTextColor="@{viewModel.setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fsdMtvDate"
                        style="@style/setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_date_demo"
                        android:textSize="@{viewModel.setting.textSize.settingPageToFloat}"
                        app:settingDateBackgroundColor="@{viewModel.setting}"
                        app:settingDateTextColor="@{viewModel.setting}" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fsdMtvHorizontalLineBottom"
                        style="@style/setting_horizontal_line" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fsdMbDateTextColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_date_text_color"
                        android:textSize="@{viewModel.setting.textSize.settingPageToFloat}"
                        app:icon="@drawable/ic_baseline_text_fields_24"
                        app:iconSize="@{viewModel.setting.textSize.settingPage}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fsdMbDateBackgroundColor"
                        style="@style/setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_date_background_color"
                        android:textSize="@{viewModel.setting.textSize.settingPageToFloat}"
                        app:icon="@drawable/ic_baseline_article_24"
                        app:iconSize="@{viewModel.setting.textSize.settingPage}" />
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>